[workspace]
resolver = "2"
members = [
    "surrealdb_extra",
    "surrealdb_extra_derive",
    "surrealdb_extra_tests",
    "surrealdb_extra_bench",
]

[workspace.dependencies]
surrealdb = { package = "surrealdb", version = ">=2.1" }

[patch.crates-io]
# Override surrealdb with the Git repository
surrealdb = { package = "surrealdb", git = "https://github.com/SteelCrow/surrealdb.git" }

[workspace.package]
version = "0.10.2"
edition = "2021"
rust-version = "1.80.0"
